[package]
name = "gba-ecs-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
agb = { workspace = true }
portable-atomic = { workspace = true }
gba-ecs-derive = { path = "../gba-ecs-derive" }

# [profile.dev]
# opt-level = 3
# debug = true
#
# [profile.release]
# opt-level = 3
# lto = "fat"
# debug = true
