[package]
name = "gba-ecs-test"
version = "0.1.0"
authors = [""]
edition = "2021"

[[bin]]
name = "gba-ecs-test"
path = "src/main.rs"

[dependencies]
gba-ecs-rs = { path = "../gba-ecs-rs" }
agb = { workspace = true }
portable-atomic = { workspace = true }

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
